libhocr (0.10.1)

 * internal image loader can load pnm P6 images
 * new functions for color and gray scale images 
 * user can set light/dark image settings from the command
    line utility.
 *

 -- Yaacov Zamir <kzamir@walla.co.il>  Tuesday, 16 Jan 2007 20:10

libhocr (0.10.0)

 * a code cleanup:
    re-write of object/struct definitions.
    re-write of the segmentation and recognition functions.
    re-write of the input-output functions.
    file re-organization and naming.
 * API changes, temporarily remove bindings and examples.
 * hocr command line utility requires gtk for input and output
 
 -- Yaacov Zamir <kzamir@walla.co.il>  Sun, 25 Jun 2006 22:13

hocr (0.8.2)

 * change g_file_set_contents to simple fprintf call in file 
   examples/hocr-gtk/callbacks.c
 * add hspell backend to hocr_textbuffer
 * add glib's Character Set Conversion support to hocr_textbuffer
 * add glib's File save support to hocr_textbuffer
 * add gtk's open/save picture files to hocr_pixbuf.
 * default brightness is 128 now
 * new and preetier logo by Shlomi
 * Daniel Nylander: swedish Swedish translation of hocr-gtk
 
 -- Yaacov Zamir <kzamir@walla.co.il>  Sun, 15 Jan 2006 22:13

hocr (0.8.0)

 * Shlomi Israel: hocr logo.
 * Tal. (tal.bav@gmail.com): Fix memory leak when unrefing the text structure 
 
 -- Yaacov Zamir <kzamir@walla.co.il>  Sat, 14 Jan 2006 22:13

hocr (0.7.2)

 * command line example implements pipes
 * Tal. (tal.bav@gmail.com): add save ppm to command line example.
 * move tal's save as pnm to the internal hocr_pixbuf functions.
 * add command line args to hocr-gtk example
 * add save picture to hocr-gtk example
 * add xsane option to hocr-gtk example
 * clean picture from artefacts before ocr it
 * Tal. (tal.bav@gmail.com): add java binding example imagej-plugin
 
 -- Yaacov Zamir <kzamir@walla.co.il>  Thu, 5 Jan 2006 22:13
 
hocr (0.7.1)

 * Fix bindings
 * add pyGTK example
 * Diego Iastrubni: fix qt example
